# Cornelius

./: CMakeLists.txt  README.md
src/: Cornelius.cpp  Cornelius.h  Cube.cpp  Cube.h  GeneralGeometryElement.cpp  GeneralGeometryElement.h  Hypercube.cpp  Hypercube.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Polyhedron.cpp  Polyhedron.h  Square.cpp  Square.h  main.cpp
src_old/: cornelius_old.cpp  cornelius_old.h
src_test/: TestCornelius.cpp  TestCube.cpp  TestGeneralGeometryElement.cpp  TestHypercube.cpp  TestLine.cpp  TestPolygon.cpp  TestPolyhedron.cpp  TestSquare.cpp
